welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:14: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:26: error: Unmatched closing brace '}' ignored here
}
^